--- a/src/GUI/.gitignore
+++ b/src/GUI/.gitignore
@@ -19,3 +19,14 @@
 /frmTHONGKE$1.class
 /frmTHONGKE$2.class
 /frmTHONGTINPHIM$1.class
+/frmTHONGTINPHIM$2.class
+/frmTestTHongTinPhim.class
+/frmTHONGTINPHIM$3.class
+/frmTHONGTINPHIM$4.class
+/frmTHONGTINPHIM$5.class
+/frmTHONGTINPHIM$6.class
+/frmTHONGTINPHIM$7.class
+/frmTHONGTINPHIM$8.class
+/frmTHONGTINPHIM$9.class
+/frmTHONGTINPHIM$10.class
+/frmTHONGTINPHIM$11.class
