--- a/src/quanlyrapphim/.gitignore
+++ b/src/quanlyrapphim/.gitignore
@@ -6,3 +6,11 @@
 /frmQuanLyRapPhim$5.class
 /frmQuanLyRapPhim$6.class
 /frmQuanLyRapPhim$7.class
+/frmQuanLyPhim.class
+/frmQuanLyPhim$1.class
+/frmQuanLyPhim$2.class
+/frmQuanLyPhim$3.class
+/frmQuanLyPhim$4.class
+/frmQuanLyPhim$5.class
+/frmQuanLyPhim$6.class
+/frmQuanLyPhim$7.class
