--- a/src/GUI/.gitignore
+++ b/src/GUI/.gitignore
@@ -30,3 +30,5 @@
 /frmTHONGTINPHIM$9.class
 /frmTHONGTINPHIM$10.class
 /frmTHONGTINPHIM$11.class
+/frmThemThongTinPhim$1.class
+/frmThemThongTinPhim.class
