--- a/src/GUI/.gitignore
+++ b/src/GUI/.gitignore
@@ -32,3 +32,9 @@
 /frmTHONGTINPHIM$11.class
 /frmThemThongTinPhim$1.class
 /frmThemThongTinPhim.class
+/frmThemNhanVien$1.class
+/frmThemNhanVien.class
+/frmThemNhanVien$2.class
+/frmNHANVIEN$1.class
+/dialogThemNhanVien.class
+/dialogThemNhanVien$1.class
