--- a/src/GUI/.gitignore
+++ b/src/GUI/.gitignore
@@ -38,3 +38,28 @@
 /frmNHANVIEN$1.class
 /dialogThemNhanVien.class
 /dialogThemNhanVien$1.class
+/dialogThemNhanVien$2.class
+/dialogThemNhanVien$3.class
+/dialogThemNhanVien$4.class
+/dialogThemNhanVien$5.class
+/frmNHANVIEN$2.class
+/frmNHANVIEN$3.class
+/dialogThemNhanVien$6.class
+/dialogThemNhanVien$7.class
+/dialogThemNhanVien$8.class
+/dialogThemNhanVien$9.class
+/dialogThemNhanVien$10.class
+/frmThemThongTinPhim$2.class
+/frmThemThongTinPhim$3.class
+/frmThemThongTinPhim$4.class
+/frmThemThongTinPhim$5.class
+/frmThemThongTinPhim$6.class
+/frmThemThongTinPhim$7.class
+/dialogThemThongTinPhim.class
+/dialogThemThongTinPhim$1.class
+/dialogThemThongTinPhim$2.class
+/dialogThemThongTinPhim$3.class
+/dialogThemThongTinPhim$4.class
+/dialogThemThongTinPhim$5.class
+/dialogThemThongTinPhim$6.class
+/dialogThemThongTinPhim$7.class
