Sửa code NhanVienBLL và PhimBLL

--- a/src/GUI/.gitignore
+++ b/src/GUI/.gitignore
@@ -63,3 +63,12 @@
 /dialogThemThongTinPhim$5.class
 /dialogThemThongTinPhim$6.class
 /dialogThemThongTinPhim$7.class
+/frmCANHAN$1.class
+/frmThemNhanVien$10.class
+/frmThemNhanVien$3.class
+/frmThemNhanVien$4.class
+/frmThemNhanVien$5.class
+/frmThemNhanVien$6.class
+/frmThemNhanVien$7.class
+/frmThemNhanVien$8.class
+/frmThemNhanVien$9.class
