Xong Form Thông tin phim, Nhân viên, Cá nhân

--- a/src/GUI/.gitignore
+++ b/src/GUI/.gitignore
@@ -72,3 +72,6 @@
 /frmThemNhanVien$7.class
 /frmThemNhanVien$8.class
 /frmThemNhanVien$9.class
+/frmCANHAN$2.class
+/frmNHANVIEN$4.class
+/frmNHANVIEN$5.class
