--- a/.classpath
+++ b/.classpath
@@ -6,27 +6,27 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PC/Downloads/jgoodies-looks-2.4.1.jar">
+	<classpathentry kind="lib" path="C:/Users/acer/Documents/Java-SQL/sqljdbc_12.6/enu/jars/mssql-jdbc-12.6.0.jre11.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PC/Downloads/junit-4.6.jar">
+	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/jgoodies-looks-2.4.1.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PC/Downloads/jcalendar-1.4.jar">
+	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/junit-4.6.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PC/Downloads/jgoodies-common-1.2.0.jar">
+	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/PC/Downloads/mssql-jdbc-12.6.0.jre8.jar">
+	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/jgoodies-common-1.2.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
