--- a/.classpath
+++ b/.classpath
@@ -1,52 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/nguye/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar">
-=======
-	<classpathentry kind="lib" path="C:/Users/acer/Documents/Java-SQL/sqljdbc_12.6/enu/jars/mssql-jdbc-12.6.0.jre11.jar">
->>>>>>> DucThang
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-<<<<<<< HEAD
+	<classpathentry kind="src" path=""/>
 	<classpathentry kind="lib" path="C:/Users/nguye/Downloads/junit-4.6.jar">
-=======
-	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/jgoodies-looks-2.4.1.jar">
->>>>>>> DucThang
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/nguye/Downloads/jgoodies-common-1.2.0.jar">
-=======
-	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/junit-4.6.jar">
->>>>>>> DucThang
+	<classpathentry kind="lib" path="C:/Users/nguye/Downloads/jcalendar-1.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/nguye/Downloads/jgoodies-looks-2.4.1.jar">
-=======
-	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/jcalendar-1.4.jar">
->>>>>>> DucThang
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-<<<<<<< HEAD
 	<classpathentry kind="lib" path="C:/Users/nguye/Downloads/mssql-jdbc-12.2.0.jre8.jar">
-=======
-	<classpathentry kind="lib" path="C:/Users/acer/Downloads/jcalendar-1.4/lib/jgoodies-common-1.2.0.jar">
->>>>>>> DucThang
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
